Fix css endentation + adjust contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,35 +7,40 @@ Secondary Color (Slighty Lighter Grey): #393939;
 Middle Color (Middle Dark grey): #2f2f2f;
  */
 
- body {
-    font-family: 'Bebas Neue', cursive;
-    font-weight: 400;
-    font-size: 16;
-    line-height: 1.6;
-    color: white;
-    background: #3a3a3a ;
-  }
+body {
+  font-family: 'Bebas Neue', cursive;
+  font-weight: 400;
+  font-size: 16;
+  line-height: 1.6;
+  color: white;
+  background: #3a3a3a;
+}
 
-  header {
-    background: #c9c9c9 ;
-    font-weight: 400;
-    font-size: 16;
-    line-height: 1.6;
-  }
+header {
+  background: #c9c9c9;
+  font-weight: 400;
+  font-size: 16;
+  line-height: 1.6;
+}
 
-  footer {
-    font-weight: 400;
-    font-size: 16;
-    line-height: 1;
-    color: white;
-    background: #2f2f2f ;
-    display: flex;
-    align-content: space-around;
-  }
+footer {
+  font-weight: 400;
+  font-size: 16;
+  line-height: 1;
+  color: white;
+  background: #2f2f2f;
+  display: flex;
+  align-content: space-around;
+}
 
 a {
   text-decoration: none;
-  color: #357b70;
+  color: #90a8a3;
+}
+
+.header_links{
+  text-decoration: none;
+  color: #0b6055;
 }
 
 a:visited {
@@ -43,7 +48,8 @@ a:visited {
   color: #05676e;
 }
 
-a:hover,  a:focus {
+a:hover,
+a:focus {
   /* No underlining when hovering over a link */
   text-decoration: none;
 }
@@ -54,31 +60,32 @@ a:active {
 }
 
 button {
-    border: none;
-    font-family: inherit;
-    background-color: #357b70;
-    color: white;
-    text-decoration: none;
-    padding: 10px;
-    border-radius: 3px;
-    border-bottom: 2px solid rgba(0, 0, 0, 0.3);
-  }
+  border: none;
+  font-family: inherit;
+  background-color: #357b70;
+  color: white;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 3px;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+}
 
-  button:hover, button:focus {
-    cursor: pointer;
-    opacity: 0.8;
-  }
+button:hover,
+button:focus {
+  cursor: pointer;
+  opacity: 0.8;
+}
 
-  .button__secondary {
-    background-color: #e0b354;
-    color: #2b2b2b;
-  }
-  
+.button__secondary {
+  background-color: #e0b354;
+  color: #2b2b2b;
+}
 
-  table {
-    border-collapse: separate;
-    border-spacing: 0;
-  }
+
+table {
+  border-collapse: separate;
+  border-spacing: 0;
+}
 
 caption,
 th,
